--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ url: "https://orbixio.netlify.app"
 
 github:
   username: orbixio # change to your GitHub username
-username # change to your Twitter username
+# username # change to your Twitter username
 
 social:
   # Change to your full name.
