--- a/_config.yml
+++ b/_config.yml
@@ -1,153 +1,39 @@
-# The Site Configuration
-
-# Import the theme
 theme: jekyll-theme-chirpy
-
-# The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
-# If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
-# otherwise, the layout language will use the default value of 'en'.
 lang: en
-
-# Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
 timezone: Asia/Karachi
 
-# jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
-# ↓ --------------------------
-
-title: Orbixio # the main title
-
-tagline: A text-focused Jekyll theme # it will display as the subtitle
-
+title: Orbixio 
+tagline: A blog dedicated to Offensive Tradecraft and ART (Advanced Red Teaming)
 description: \x21\x79\x61\x64\x79\x72\x65\x76\x65\x20\x73\x67\x6e\x69\x68\x74\x20\x77\x65\x6e\x20\x67\x6e\x69\x6e\x72\x61\x65\x6c\x20\x74\x6e\x65\x64\x75\x74\x73\x20\x79\x74\x69\x72\x75\x63\x65\x73\x20\x72\x65\x62\x79\x63\x20\x67\x6e\x69\x72\x69\x70\x73\x61\x20\x6e\x61\x20\x6d\x27\x49
-
-# Fill in the protocol & hostname for your site.
-# E.g. 'https://username.github.io', note that it does not end with a '/'.
 url: "https://orbixio.netlify.app"
 
 github:
-  username: orbixio # change to your GitHub username
-# username # change to your Twitter username
-
+  username: orbixio 
 social:
-  # Change to your full name.
-  # It will be displayed as the default author of the posts and the copyright owner in the Footer
   name: Muhammad Usman
-  email: orbixio@proton.me # change to your email address
+  email: orbixio@proton.me 
   links:
-    # The first element serves as the copyright owner's link
-    - https://github.com/orbixio # change to your GitHub homepage
-    # Uncomment below to add more social links
-    # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
+    - https://github.com/orbixio 
 
-# Site Verification Settings
-# webmaster_verifications:
-#   google: # fill in your Google verification code
-#   bing: # fill in your Bing verification code
-#   alexa: # fill in your Alexa verification code
-#   yandex: # fill in your Yandex verification code
-#   baidu: # fill in your Baidu verification code
-#   facebook: # fill in your Facebook verification code
-
-# ↑ --------------------------
-# The end of `jekyll-seo-tag` settings
-
-# Web Analytics Settings
-analytics:
-  google:
-    id: # fill in your Google Analytics ID
-  goatcounter:
-    id: # fill in your GoatCounter ID
-  umami:
-    id: # fill in your Umami ID
-    domain: # fill in your Umami domain
-  matomo:
-    id: # fill in your Matomo ID
-    domain: # fill in your Matomo domain
-  cloudflare:
-    id: # fill in your Cloudflare Web Analytics token
-
-# Page views settings
-pageviews:
-  provider: # now only supports 'goatcounter'
-
-# Prefer color scheme setting.
-#
-# Note: Keep empty will follow the system prefer color by default,
-# and there will be a toggle to switch the theme between dark and light
-# on the bottom left of the sidebar.
-#
-# Available options:
-#
-#     light — Use the light color scheme
-#     dark — Use the dark color scheme
-#
-theme_mode: dark # [light | dark]
-
-# The CDN endpoint for media resources.
-# Notice that once it is assigned, the CDN url
-# will be added to all media resources (site avatar, posts' images, audio and video files) paths starting with '/'
-#
-# e.g. 'https://cdn.com'
+theme_mode: dark 
 cdn: "https://chirpy-img.netlify.app"
-
-# the avatar on sidebar, support local or CORS resources
 avatar: "/commons/avatar.jpg"
-
-# The URL of the site-wide social preview image used in SEO `og:image` meta tag.
-# It can be overridden by a customized `page.image` in front matter.
-# social_preview_image: # string, local or CORS resources
-
-# boolean type, the global switch for TOC in posts.
 toc: true
 
-# comments:
-#   # Global switch for the post-comment system. Keeping it empty means disabled.
-#   provider: # [disqus | utterances | giscus]
-#   # The provider options are as follows:
-#   disqus:
-#     shortname: # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
-#   # utterances settings › https://utteranc.es/
-#   utterances:
-#     repo: # <gh-username>/<repo>
-#     issue_term: # < url | pathname | title | ...>
-#   # Giscus options › https://giscus.app
-#   giscus:
-#     repo: # <gh-username>/<repo>
-#     repo_id:
-#     category:
-#     category_id:
-#     mapping: # optional, default to 'pathname'
-#     strict: # optional, default to '0'
-#     input_position: # optional, default to 'bottom'
-#     lang: # optional, default to the value of `site.lang`
-#     reactions_enabled: # optional, default to the value of `1`
-
-# Self-hosted static assets, optional › https://github.com/cotes2020/chirpy-static-assets
 assets:
   self_host:
-    enabled: # boolean, keep empty means false
-    # specify the Jekyll environment, empty means both
-    # only works if `assets.self_host.enabled` is 'true'
-    env: # [development | production]
+    enabled: 
+    env: production
 
 pwa:
-  enabled: true # The option for PWA feature (installable)
+  enabled: true 
   cache:
-    enabled: true # The option for PWA offline cache
-    # Paths defined here will be excluded from the PWA cache.
-    # Usually its value is the `baseurl` of another website that
-    # shares the same domain name as the current website.
+    enabled: true 
     deny_paths:
-      # - "/example"  # URLs match `<SITE_URL>/example/*` will not be cached by the PWA
-
+    
 paginate: 10
 
-# The base URL of your site
 baseurl: ""
-
-# ------------ The following options are not recommended to be modified ------------------
-
 kramdown:
   footnote_backlink: "&#8617;&#xfe0e;"
   syntax_highlighter: rouge
