--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ social:
 
 theme_mode: dark 
 cdn: "https://chirpy-img.netlify.app"
-avatar: "/commons/avatar.jpg"
+avatar: "/assets/img/air-crash-burning-falling-plane-plane-crashed-ground_93314-3412.png"
 toc: true
 
 assets:
